# hermes-trading

./: .gitignore  Dockerfile  entrypoint.sh  fly.toml  pyproject.toml  setup_gist.py
.github/workflows/: trading.yml
docs/: index.html
hermes_trading/: dashboard.py  loop.py  reflect.py  run.py  score.py
hermes_trading/adapters/: gist_state.py  macro.py  news.py  price.py  universe.py
hermes_trading/static/: index.html
state/: goal.yaml  heartbeat.json  hypotheses.jsonl  positions.json  strategy.yaml  trades.jsonl
state/history/: v01.yaml  v04.yaml  v05.yaml  v06.yaml  v07.yaml  v08.yaml  v09.yaml  v10.yaml  v11.yaml  v12.yaml  v13.yaml  v14.yaml  v15.yaml  v16.yaml  v17.yaml  v18.yaml  v19.yaml  v20.yaml  v21.yaml  v22.yaml  v23.yaml  v24.yaml  v25.yaml  v26.yaml  v27.yaml  v28.yaml  v29.yaml  v30.yaml  v31.yaml  v32.yaml  v33.yaml  v34.yaml  v35.yaml  v36.yaml  v37.yaml  v38.yaml  v39.yaml  v40.yaml  v41.yaml  v42.yaml  (+24 more)
