[project]
name = "hermes-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "rich>=13.7",
    "pytz>=2024.1",
    "anthropic>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_trading"]
